test/spec_vectors/select/fail/module_29.wat
(module (func (select (i32.const 1) (i32.const 1) (f32.const 1)) (drop)))